--- a/public/views/student.html
+++ b/public/views/student.html
@@ -31,8 +31,14 @@
 <aside class="h-screen w-fit" x-data="{ expanded: $persist(true) }">
   <nav class="h-full flex flex-col bg-[#2a2a2a] text-gray-300 border-r shadow-sm">
     <div class="py-2.5 px-3 flex items-center justify-between border-b border-[#383838]">
-			<label class="text-2xl text-nowrap overflow-hidden transition-all" :class="expanded ? 'w-52' : 'w-0' ">Gabriel Henrique</label>
-			<button x-on:click="expanded = !expanded" class="p-1.5 w-10 h-10 rounded-lg bg-[#383838] hover:bg-[#4f4f4f] cursor-pointer transition-colors" :class=" expanded ? '' : 'mx-auto' ">
+			<label 
+        class="text-2xl text-nowrap overflow-hidden transition-all" 
+        :class="expanded ? 'w-52' : 'w-0' ">Gabriel Henrique</label>
+			<button 
+        x-on:click="expanded = !expanded" 
+        class="p-1.5 w-10 h-10 rounded-lg bg-[#383838] hover:bg-[#4f4f4f] cursor-pointer 
+              transition-colors" 
+        :class=" expanded ? '' : 'mx-auto' ">
 			  <template x-if="expanded == true">
           <i class="fa-solid fa-chevron-left"></i>
 				</template>
@@ -53,7 +59,9 @@
     <ul class="mt-2 flex-1 px-3">
 
       <li
-        class="bg-gradient-to-bl from-blue-700 to-blue-600 relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class="bg-gradient-to-bl from-blue-700 to-blue-600 relative text-lg flex items-center 
+              justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
+              transition-colors group">
         <i class="fa-solid fa-circle-question"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -63,14 +71,16 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Informações
           </div>
         </template>
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
+              my-1 font-medium rounded-md cursor-pointer transition-colors group">
         <i class="fa-solid fa-calendar-days"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -80,14 +90,16 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Cronograma
           </div>
         </template>
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3
+              my-1 font-medium rounded-md cursor-pointer transition-colors group">
         <i class="fa-solid fa-envelope"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -97,14 +109,16 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Email institucional
           </div>
         </template>
       </li>
       
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
+              my-1 font-medium rounded-md cursor-pointer transition-colors group">
         <i class="fa-solid fa-book"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -114,14 +128,16 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Boletim escolar
           </div>
         </template>
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
+              my-1 font-medium rounded-md cursor-pointer transition-colors group">
         <i class="fa-solid fa-circle-exclamation"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -131,14 +147,16 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Avisos
           </div>
         </template>
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
+              my-1 font-medium rounded-md cursor-pointer transition-colors group">
         <i class="fa-solid fa-calendar-week"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -148,14 +166,16 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Frequência
           </div>
         </template>
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
+              my-1 font-medium rounded-md cursor-pointer transition-colors group">
         <i class="fa-solid fa-headset"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -165,7 +185,8 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Suporte
           </div>
         </template>
@@ -175,7 +196,8 @@
 
     <div class="h-15 border-t border-[#383838] flex items-center justify-center p-3">
       <button
-        class="bg-[#a8323e] hover:bg-[#8c2a34] relative text-lg flex items-center justify-center py-1 px-3 rounded-md cursor-pointer transition-all group" 
+        class="bg-[#a8323e] hover:bg-[#8c2a34] relative text-lg flex items-center 
+              justify-center py-1 px-3 rounded-md cursor-pointer transition-all group" 
         :class="expanded ? 'w-full' : 'w-fit'">
         <i class="fa-solid fa-right-from-bracket"></i>
         <span 
@@ -187,7 +209,8 @@
           <div
             class="absolute left-full rounded-md px-2 py-1 
                 ml-6 bg-red-200 text-red-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible group-hover:opacity-100 group-hover:translate-x-0">
+                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                group-hover:opacity-100 group-hover:translate-x-0">
             Sair
           </div>
         </template>
