--- a/public/views/student.html
+++ b/public/views/student.html
@@ -22,20 +22,127 @@
     <div class="flex w-full justify-center items-center">
         <div class="w-4/5 h-4/5 m-10 grid grid-cols-3 gap-2 grid-rows-2">
           <div 
-            class="flex justify-center items-start col-span-2 border 
-                border-gray-200 shadow rounded-md">
-            <h1 class="text-xl py-2">Pendências</h1>
+            class="flex flex-col justify-center items-start col-span-2 border 
+                border-gray-300 shadow rounded-md">
+            <h1 class="w-full text-center text-xl bg-gray-100 py-2">Pendências</h1>
+            <div class="flex w-full h-full p-10 pt-1">
+              <ul class="w-full h-full">
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-triangle-exclamation mr-2 text-yellow-600"></i>Pendencia exemplo 1
+                </li>
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-triangle-exclamation mr-2 text-yellow-600"></i>Pendencia exemplo 2
+                </li>
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-triangle-exclamation mr-2 text-yellow-600"></i>Pendencia exemplo 3
+                </li>
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-triangle-exclamation mr-2 text-yellow-600"></i>Pendencia exemplo 4
+                </li>
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-triangle-exclamation mr-2 text-yellow-600"></i>Pendencia exemplo 5
+                </li>
+              </ul>              
+            </div>
           </div>
-          <div class="flex justify-center items-start row-span-2 border 
-                border-gray-200 shadow rounded-md">
-            <h1 class="text-xl py-2">Avisos</h1>
+          <div class="flex flex-col justify-center items-start row-span-2 border 
+                border-gray-300 shadow rounded-md">
+            <h1 class="w-full text-center text-xl bg-gray-100 py-2">Avisos</h1>
+            <div class="flex w-full h-full p-10 pt-1">
+              <ul class="w-full h-full">
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-circle-exclamation mr-2 text-red-400"></i>Aviso exemplo 1
+                </li>
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-circle-exclamation mr-2 text-red-400"></i>Aviso exemplo 2
+                </li>
+                <li 
+                  class="h-8 my-2 flex justify-start items-center border-b border-gray-300 text-md">
+                  <i class="fa-solid fa-circle-exclamation mr-2 text-red-400"></i>Aviso exemplo 3
+                </li>
+              </ul>              
+            </div>
           </div>
           <div 
-            class="flex justify-center items-start col-span-2 bg-[#383838] 
+            class="flex flex-col justify-start items-center col-span-2 bg-[#383838] 
                   border border-gray-600 shadow rounded-md">
-            <h1 class="text-xl text-gray-50 py-2">Horário</h1>
+            <h1 class="w-full text-center text-xl text-gray-50 bg-[#303030] py-2">Aulas hoje</h1>
+            <div class="flex w-full h-full p-10 pt-1">
+              <table class="text-gray-50 w-full h-full">
+                <tr class="text-center">
+                  <th class="w-1/3">Horário</th>
+                  <th class="w-1/3">Matéria</th>
+                  <th class="w-1/3">Professor(a)</th>
+                </tr>
+                <tr class="text-center">
+                  <td>7:30 - 8:20</td>
+                  <td>Matemática</td>
+                  <td>Irene</td>
+                </tr>
+                <tr class="text-center">
+                  <td>8:20 - 9:10</td>
+                  <td>Matemática</td>
+                  <td>Irene</td>
+                </tr>
+                <tr class="text-center">
+                  <td>9:10 - 10:00</td>
+                  <td>Matemática</td>
+                  <td>Irene</td>
+                </tr>
+                <tr class="text-center">
+                  <td>10:20 - 11:10</td>
+                  <td>Português</td>
+                  <td>Yara</td>
+                </tr>
+                <tr class="text-center">
+                  <td>11:10 - 12:00</td>
+                  <td>Português</td>
+                  <td>Yara</td>
+                </tr>
+                <tr class="text-center">
+                  <td>12:00 - 12:50</td>
+                  <td>Português</td>
+                  <td>Yara</td>
+                </tr>
+              </table>
+            </div>
           </div>
         </div>
+    </div>
+  </section>
+</body>
+</html>
+{{end}}
+
+{{block "student_mail" .}}
+<!doctype html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <script src="https://unpkg.com/htmx.org@2.0.4"
+      integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
+      crossorigin="anonymous"></script>
+  <link rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Email institucional</title>
+</head>
+<body>
+  <section class="flex h-screen w-full">
+      {{template "student_sidebar" .}} 
+    <div class="flex w-full justify-center items-center">
     </div>
   </section>
 </body>
@@ -73,29 +180,43 @@
     </div>
     <ul class="mt-2 flex-1 px-3">
 
-      <li
-        class="bg-gradient-to-bl from-blue-700 to-blue-600 relative text-lg flex items-center 
+      <li>
+        <a 
+          href="/aluno/info"
+          class='relative text-lg flex items-center 
               justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
-              transition-colors group">
-        <i class="fa-solid fa-circle-question"></i>
-        <span class="overflow-hidden transition-all text-nowrap text-gray-300"
-          :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
-          Informações
-        </span>
-        <template x-if="!expanded">
-          <div
-            class="absolute left-full rounded-md px-2 py-1 
-                ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
-                group-hover:opacity-100 group-hover:translate-x-0">
+              transition-colors group 
+              {{if eq .active "info"}} 
+                bg-gradient-to-bl from-blue-700 to-blue-600 
+              {{else}} 
+                hover:bg-[#4f4f4f] 
+              {{end}}'>
+          <i class="fa-solid fa-circle-question"></i>
+          <span href="/aluno/info" class="overflow-hidden transition-all text-nowrap text-gray-300"
+            :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
             Informações
-          </div>
-        </template>
+          </span>
+          <template x-if="!expanded">
+            <div
+              class="absolute left-full rounded-md px-2 py-1 
+                  ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
+                  invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                  group-hover:opacity-100 group-hover:translate-x-0">
+              Informações
+            </div>
+          </template>
+        </a>
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
-              my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class='relative text-lg flex items-center 
+              justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
+              transition-colors group 
+              {{if eq .active "calendar"}} 
+                bg-gradient-to-bl from-blue-700 to-blue-600 
+              {{else}} 
+                hover:bg-[#4f4f4f] 
+              {{end}}'>
         <i class="fa-solid fa-calendar-days"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -112,28 +233,43 @@
         </template>
       </li>
 
-      <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3
-              my-1 font-medium rounded-md cursor-pointer transition-colors group">
-        <i class="fa-solid fa-envelope"></i>
-        <span class="overflow-hidden transition-all text-nowrap text-gray-300"
-          :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
-          Email institucional
-        </span>
-        <template x-if="!expanded">
-          <div
-            class="absolute left-full rounded-md px-2 py-1 
-                ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
-                invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
-                group-hover:opacity-100 group-hover:translate-x-0">
+      <li>
+        <a 
+          href="/aluno/email" 
+          class='relative text-lg flex items-center 
+              justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
+              transition-colors group 
+              {{if eq .active "mail"}} 
+                bg-gradient-to-bl from-blue-700 to-blue-600 
+              {{else}} 
+                hover:bg-[#4f4f4f] 
+              {{end}}'>
+          <i class="fa-solid fa-envelope"></i>
+          <span class="overflow-hidden transition-all text-nowrap text-gray-300"
+            :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
             Email institucional
-          </div>
-        </template>
+          </span>
+          <template x-if="!expanded">
+            <div
+              class="absolute left-full rounded-md px-2 py-1 
+                  ml-6 bg-blue-200 text-blue-800 text-sm text-nowrap
+                  invisible opacity-20 -translate-x-3 transition-all group-hover:visible 
+                  group-hover:opacity-100 group-hover:translate-x-0">
+              Email institucional
+            </div>
+          </template>
+        </a>
       </li>
       
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
-              my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class='relative text-lg flex items-center 
+              justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
+              transition-colors group 
+              {{if eq .active "grade"}} 
+                bg-gradient-to-bl from-blue-700 to-blue-600 
+              {{else}} 
+                hover:bg-[#4f4f4f] 
+              {{end}}'>
         <i class="fa-solid fa-book"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -151,8 +287,14 @@
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
-              my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class='relative text-lg flex items-center 
+              justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
+              transition-colors group 
+              {{if eq .active "warnings"}} 
+                bg-gradient-to-bl from-blue-700 to-blue-600 
+              {{else}} 
+                hover:bg-[#4f4f4f] 
+              {{end}}'>
         <i class="fa-solid fa-circle-exclamation"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -170,8 +312,14 @@
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
-              my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class='relative text-lg flex items-center 
+              justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
+              transition-colors group 
+              {{if eq .active "freq"}} 
+                bg-gradient-to-bl from-blue-700 to-blue-600 
+              {{else}} 
+                hover:bg-[#4f4f4f] 
+              {{end}}'>
         <i class="fa-solid fa-calendar-week"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
@@ -189,8 +337,14 @@
       </li>
 
       <li
-        class="hover:bg-[#4f4f4f] relative text-lg flex items-center justify-center py-1 px-3 
-              my-1 font-medium rounded-md cursor-pointer transition-colors group">
+        class='relative text-lg flex items-center 
+              justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
+              transition-colors group 
+              {{if eq .active "support"}} 
+                bg-gradient-to-bl from-blue-700 to-blue-600 
+              {{else}} 
+                hover:bg-[#4f4f4f] 
+              {{end}}'>
         <i class="fa-solid fa-headset"></i>
         <span class="overflow-hidden transition-all text-nowrap text-gray-300"
           :class=" expanded ? 'w-52 ml-3' : 'w-0 ml-0' ">
