Remade some names

--- a/public/views/student.html
+++ b/public/views/student.html
@@ -212,7 +212,7 @@
         class='relative text-lg flex items-center 
               justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
               transition-colors group 
-              {{if eq .active "calendar"}} 
+              {{if eq .active "cronograma"}} 
                 bg-gradient-to-bl from-blue-700 to-blue-600 
               {{else}} 
                 hover:bg-[#4f4f4f] 
@@ -239,7 +239,7 @@
           class='relative text-lg flex items-center 
               justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
               transition-colors group 
-              {{if eq .active "mail"}} 
+              {{if eq .active "email"}} 
                 bg-gradient-to-bl from-blue-700 to-blue-600 
               {{else}} 
                 hover:bg-[#4f4f4f] 
@@ -265,7 +265,7 @@
         class='relative text-lg flex items-center 
               justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
               transition-colors group 
-              {{if eq .active "grade"}} 
+              {{if eq .active "boletim"}} 
                 bg-gradient-to-bl from-blue-700 to-blue-600 
               {{else}} 
                 hover:bg-[#4f4f4f] 
@@ -290,7 +290,7 @@
         class='relative text-lg flex items-center 
               justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
               transition-colors group 
-              {{if eq .active "warnings"}} 
+              {{if eq .active "avisos"}} 
                 bg-gradient-to-bl from-blue-700 to-blue-600 
               {{else}} 
                 hover:bg-[#4f4f4f] 
@@ -315,7 +315,7 @@
         class='relative text-lg flex items-center 
               justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
               transition-colors group 
-              {{if eq .active "freq"}} 
+              {{if eq .active "frequencia"}} 
                 bg-gradient-to-bl from-blue-700 to-blue-600 
               {{else}} 
                 hover:bg-[#4f4f4f] 
@@ -340,7 +340,7 @@
         class='relative text-lg flex items-center 
               justify-center py-1 px-3 my-1 font-medium rounded-md cursor-pointer 
               transition-colors group 
-              {{if eq .active "support"}} 
+              {{if eq .active "suporte"}} 
                 bg-gradient-to-bl from-blue-700 to-blue-600 
               {{else}} 
                 hover:bg-[#4f4f4f] 
