--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,7 +4,7 @@
   {{template "login_head" .}}
 <body>
     <section id="main" class="flex h-screen w-full justify-center items-center">
-        {{template "login_manager" .}}
+        {{template "login_student" .}}
     </section>
 </body>
 </html>
@@ -12,8 +12,8 @@
 
 {{block "login_student" .}}
 <div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl">
-    <form action="" method="post" class="flex flex-col items-center justify-between w-full h-full text-gray-200">
-        <h1 class="flex items-center justify-center text-5xl h-26">Sistema XD</h1>
+    <form hx-post="/login/aluno" method="post" class="flex flex-col items-center justify-between w-full h-full text-gray-200">
+        <h1 class="flex items-center justify-center text-5xl h-25">Sistema XD</h1>
         <div class="flex flex-col items-center justify-center gap-y-5">
             <div class="flex items-center justify-center w-full">
                 <span class="text-xl mr-5">Entrar como:</span>
@@ -32,11 +32,11 @@
             <div class="flex items-center justify-center w-full gap-x-5">
                 <div class="inline-flex items-center justify-center">
                     <span class="text-xl mr-5">RM:</span>
-                    <input type="text" name="rm" id="rm" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
+                    <input type="text" name="user" id="user" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
                 </div>
                 <div class="inline-flex items-center justify-center">
                     <span class="text-xl mr-5">Senha:</span>
-                    <input type="text" name="rm" id="rm" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
+                    <input type="text" name="password" id="password" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
                 </div>
             </div>
             <a href="" class="cursor-pointer text-lg text-[#5994ff] hover:text-blue-600">Recuperar senha</a>
@@ -52,7 +52,7 @@
 {{block "login_teacher" .}}
 <div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl">
     <form action="" method="post" class="flex flex-col items-center justify-between w-full h-full text-gray-200">
-        <h1 class="flex items-center justify-center text-5xl h-26">Sistema XD</h1>
+        <h1 class="flex items-center justify-center text-5xl h-25">Sistema XD</h1>
         <div class="flex flex-col items-center justify-center gap-y-5">
             <div class="flex items-center justify-center w-full">
                 <span class="text-xl mr-5">Entrar como:</span>
@@ -71,11 +71,11 @@
             <div class="flex items-center justify-center w-full gap-x-5">
                 <div class="inline-flex items-center justify-center">
                     <span class="text-xl mr-5">Login:</span>
-                    <input type="text" name="rm" id="rm" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
+                    <input type="text" name="user" id="user" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
                 </div>
                 <div class="inline-flex items-center justify-center">
                     <span class="text-xl mr-5">Senha:</span>
-                    <input type="text" name="rm" id="rm" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
+                    <input type="text" name="password" id="password" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
                 </div>
             </div>
             <a href="" class="cursor-pointer text-lg text-[#5994ff] hover:text-blue-600">Recuperar senha</a>
@@ -91,18 +91,18 @@
 {{block "login_manager" .}}
 <div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl">
     <form action="" method="post" class="flex flex-col items-center justify-between w-full h-full text-gray-200">
-        <h1 class="flex items-center justify-center text-5xl h-26">Sistema XD</h1>
+        <h1 class="flex items-center justify-center text-5xl h-25">Sistema XD</h1>
         <div class="flex flex-col items-center justify-center gap-y-5">
             <div class="flex items-center justify-center w-full">
                 <span class="text-xl mr-5">Entrar como:</span>
                 <div class="inline-flex h-12 rounded-lg shadow-xl">
-                    <button hx-get="/login/aluno" hx-target="#main" hx-swap="innerHTML" class="cursor-pointer px-10 py-2 text-lg font-bold border border-gray-400 text-gray-400 rounded-l-lg">
+                    <button hx-get="/login/aluno" hx-target="#main" hx-swap="innerHTML" class="cursor-pointer px-10 py-2 text-lg font-medium border border-gray-400 text-gray-400 rounded-l-lg">
                         Aluno
                     </button>
                     <button hx-get="/login/professor" hx-target="#main" hx-swap="innerHTML" class="cursor-pointer px-6 py-2 text-lg font-medium border-t border-b border-gray-400 text-gray-400">
                         Professor
                     </button>
-                    <button hx-get="/login/supervisao" hx-target="#main" hx-swap="innerHTML" class="cursor-pointer px-6 py-2 text-lg font-medium border-3 border-[#367dff] text-[#5994ff] rounded-r-lg">
+                    <button hx-get="/login/supervisao" hx-target="#main" hx-swap="innerHTML" class="cursor-pointer px-6 py-2 text-lg font-bold border-3 border-[#367dff] text-[#5994ff] rounded-r-lg">
                         Supervisão
                     </button>
                 </div>
@@ -110,16 +110,16 @@
             <div class="flex items-center justify-center w-full gap-x-5">
                 <div class="inline-flex items-center justify-center">
                     <span class="text-xl mr-5">Login:</span>
-                    <input type="text" name="rm" id="rm" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
+                    <input type="text" name="user" id="user" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
                 </div>
                 <div class="inline-flex items-center justify-center">
                     <span class="text-xl mr-5">Senha:</span>
-                    <input type="text" name="rm" id="rm" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
+                    <input type="text" name="password" id="password" class="h-12 border-2 px-4 text-xl border-gray-300 rounded-md shadow-xl outline-none">
                 </div>
             </div>
             <a href="" class="cursor-pointer text-lg text-[#5994ff] hover:text-blue-600">Recuperar senha</a>
         </div>
-        <div class="flex flex-col items-center justify-center gap-y-2">
+        <div class="flex flex-col items-center justify-center gap-y-2 h-25">
             <input type="submit" value="Entrar" class="cursor-pointer px-18 py-4 bg-blue-600 hover:bg-blue-700 transition-colors rounded-xl text-3xl">
         </div>
     </form>
