--- a/public/views/login.html
+++ b/public/views/login.html
@@ -13,7 +13,7 @@
 {{end}} 
 
 {{block "login_student" .}}
-<div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl">
+<div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl shadow-lg">
     <form hx-post="/login/aluno" method="post" class="flex flex-col items-center justify-between w-full h-full text-gray-200">
         <h1 class="flex items-center justify-center text-5xl h-25">Sistema XD</h1>
         <div class="flex flex-col items-center justify-center gap-y-5">
@@ -55,7 +55,7 @@
 {{end}}
 
 {{block "login_teacher" .}}
-<div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl">
+<div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl shadow-lg">
     <form action="" method="post" class="flex flex-col items-center justify-between w-full h-full text-gray-200">
         <h1 class="flex items-center justify-center text-5xl h-25">Sistema XD</h1>
         <div class="flex flex-col items-center justify-center gap-y-5">
@@ -97,7 +97,7 @@
 {{end}}
 
 {{block "login_manager" .}}
-<div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl">
+<div class="flex items-center justify-center p-20 w-2/3 h-4/5 bg-[#383838] border border-[#4f4f4f] rounded-2xl shadow-lg">
     <form action="" method="post" class="flex flex-col items-center justify-between w-full h-full text-gray-200">
         <h1 class="flex items-center justify-center text-5xl h-25">Sistema XD</h1>
         <div class="flex flex-col items-center justify-center gap-y-5">
