Remade the default middleware

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -162,6 +162,6 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
     />
-    <title>{{.title}}</title>
+    <title>Entre na sua conta</title>
 </head>
 {{end}}
