--- a/internal/http/client/views/student.html
+++ b/internal/http/client/views/student.html
@@ -10,7 +10,7 @@
           <div 
             class="flex flex-col justify-center items-start col-span-2 border 
                 border-gray-300 shadow rounded-md">
-            <h1 class="w-full text-center text-xl bg-gray-100 py-2">Pendências</h1>
+            <h1 class="w-full text-center text-xl bg-gray-100 py-2 rounded-md">Pendências</h1>
             <div class="flex w-full h-full p-10 pt-1">
               <ul class="w-full h-full">
                 <li 
@@ -38,7 +38,7 @@
           </div>
           <div class="flex flex-col justify-center items-start row-span-2 border 
                 border-gray-300 shadow rounded-md">
-            <h1 class="w-full text-center text-xl bg-gray-100 py-2">Avisos</h1>
+            <h1 class="w-full text-center text-xl bg-gray-100 py-2 rounded-md">Avisos</h1>
             <div class="flex w-full h-full p-10 pt-1">
               <ul class="w-full h-full">
                 <li 
@@ -59,7 +59,7 @@
           <div 
             class="flex flex-col justify-start items-center col-span-2 bg-[#383838] 
                   border border-gray-600 shadow rounded-md">
-            <h1 class="w-full text-center text-xl text-gray-50 bg-[#303030] py-2">Aulas hoje</h1>
+            <h1 class="w-full text-center text-xl text-gray-50 bg-[#303030] py-2 rounded-md">Aulas hoje</h1>
             <div class="flex w-full h-full p-10 pt-1">
               <table class="text-gray-50 w-full h-full">
                 <tr class="text-center">
@@ -115,14 +115,14 @@
   <section class="flex h-screen w-full">
       {{template "student_sidebar" .}} 
     <main class="flex w-full justify-center items-center">
-        <div class="flex flex-col rounded-2xl w-full h-11/12 m-10 p-6 bg-[#383838]">
-          <div id="search-bar" class="w-3/4 relative text-2xl bg-[#4f4f4f] text-gray-300 border border-[#0f0f0f] rounded-2xl">
+        <div class="flex flex-col rounded-md w-4/5 h-4/5 m-10 p-6 bg-[#383838] shadow">
+          <div id="search-bar" class="relative text-2xl bg-[#4f4f4f] text-gray-300 border border-[#0f0f0f] rounded-md">
             <i class="fa-solid fa-magnifying-glass absolute left-3 top-3"></i>
-            <input type="text" class="rounded-2xl w-full px-12 py-2 outline-none" placeholder="Pesquisar e-mail">
+            <input type="text" class="rounded-md w-full px-12 py-2 outline-none" placeholder="Pesquisar e-mail">
           </div> 
-          <div id="emails" class="flex flex-col rounded-xl mt-5 w-full h-full bg-[#4f4f4f] text-gray-300 border border-[#0f0f0f]">
+          <div id="emails" class="flex flex-col rounded-md mt-5 w-full h-full bg-[#4f4f4f] text-gray-300 border border-[#0f0f0f]">
             <div id="email-options" class="flex w-full h-12 relative text-xl border-b border-[#0f0f0f]">
-              <button class="cursor-pointer px-6 rounded-tl-xl bg-gradient-to-tr from-blue-700 to-blue-600">
+              <button class="cursor-pointer px-6 rounded-tl-md bg-gradient-to-tr from-blue-700 to-blue-600">
                 <i class="fa-solid fa-inbox mr-1"></i>
                 <span>Principal</span>
               </button>
@@ -163,6 +163,9 @@
 <body>
     <section class="flex h-screen w-full">
     {{template "student_sidebar" .}}
+    <main class="flex w-full justify-center items-center">
+
+    </main>
     </section>
 </body>
 </html>
@@ -192,9 +195,9 @@
       class="flex flex-col items-center justify-between border-[#383838]"
       :class="expanded ? 'border-b p-4' : 'border-b-0 p-0'">
       <img 
-        src="https://cdn.discordapp.com/avatars/613715798816718919/3a3b62fd4f4e9c7f5baebfe57a803675?size=1024" 
+        src="/assets/img/user_placeholder.png" 
         class="aspect-3/4 transition-all"
-        :class="expanded ? 'w-40' : 'w-0'"
+        :class="expanded ? 'w-52' : 'w-0'"
         alt="Foto do aluno">
     </div>
     <ul class="mt-2 flex-1 px-3">
